# waffleEngine

./: CMakeLists.txt  LICENSE  README.md  commit.py
game/vault/waffle/.obsidian/: workspace.json
progress/: compact.py
shaders/: chunk.vert  cube.vert  triangle.frag  triangle.vert
src/: Application.cpp  Camera.cpp  InstanceBuffer.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  UI.cpp  Window.cpp  main.cpp
src/chunks/: Chunk.cpp  ChunkMesher.cpp
src/headers/: Application.h  Camera.h  Chunk.h  ChunkMesher.h  InstanceBuffer.h  Mesh.h  Renderer.h  Shader.h  Shapes.h  UI.h  Window.h
src/meshes/: Shapes.cpp
src/snippets/: instance.cpp
tools.md/: simulation_helper.md  writing_assistant.md
